# userver-postgresql-template

./: .gitignore  CMakeLists.txt  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yaml
cmake/: Variables.cmake
configs/: config_vars.docker.template.yaml  config_vars.template.yaml  config_vars.testing.yaml  static_config.yaml
include/server/: hello.hpp
scripts/: config_from_template.py  default_config.sh
scripts/env/: ubuntu-20-04.sh  ubuntu-22-04.sh
src/: main.cpp
src/server/: hello.cpp
tests/benchmark/: CMakeLists.txt
tests/benchmark/src/: hello_benchmark.cpp
tests/functional/: CMakeLists.txt  conftest.py  requirements.txt
tests/unit/: CMakeLists.txt
tests/unit/src/: hello_test.cpp
